# MethematicsWorld

./: .gitignore  CMakeLists.txt  README.md  fft.cpp  main.cpp  prepare_env.py  requirements.txt  run.py  tempCodeRunnerFile.py
utils/: dft.cpp  dft.h  test.cpp  test.py
